--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <div class="btn">
             <button id="btn-start " class="iniciar">VAI</button>
           </div>
+          <div class="btn">
+            <button id="btn-start " class="parar">parar</button>
+          </div>
     </main>
   </body>
   <script src="./script.js"></script>
