--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <body>
     <main class="relogio_container">
         <div class="relogio">
-          <div id="timer" class="timer">00:00:00</div>
+          <div id="timer" class="timer">
+            <span class="span-hora">00</span>
+            :
+            <span class="span-minutos">00</span>
+            :
+            <span class="span-segundos">00</span>
+          </div>
         </div>
 
           <section class="align-inputs">
@@ -50,6 +56,9 @@
           </div>
           <div class="btn">
             <button id="btn-start " class="reiniciar">reiniciar</button>
+          </div>
+          <div class="btn">
+            <button id="btn-start " class="continuar">Continuar</button>
           </div>
     </main>
   </body>
