--- a/index.html
+++ b/index.html
@@ -48,17 +48,19 @@
               />
             </div>
           </section>
-          <div class="btn">
-            <button id="btn-start " class="btnStart">VAI</button>
-          </div>
-          <div class="btn">
-            <button id="btn-stop " class="btnStop">parar</button>
-          </div>
-          <div class="btn">
-            <button id="btn-restart " class="btnRestart">reiniciar</button>
-          </div>
-          <div class="btn">
-            <button id="btn-continue " class="btnContinue">Continuar</button>
+          <div class="buttons">
+            <div class="btn">
+              <button id="btn-start " class="btnStart ">Iniciar</button>
+            </div>
+            <div class="btn">
+              <button id="btn-stop " class="btnStop disappear">Parar</button>
+            </div>
+            <div class="btn">
+              <button id="btn-restart " class="btnRestart disappear ">Reiniciar</button>
+            </div>
+            <div class="btn">
+              <button id="btn-continue " class="btnContinue disappear ">Continuar</button>
+            </div>
           </div>
     </main>
   </body>
